--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Refresh" content="2; url=public/index.html">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>第二屆T大使｜免學費！25週專業培訓，過考核再領10.9萬獎勵金</title>
   </head>
